--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://mrw:mixmix13@cluster0.umj6byl.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URI='mongodb+srv://mrw:mixmix13@cluster0.umj6byl.mongodb.net/test2'
